--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,13 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "proxy":"http://localhost:5000/",
+  "proxy": "http://localhost:5000/",
   "dependencies": {
     "@arcana/auth": "^1.0.1",
     "@arcana/auth-react": "0.0.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
     "@react-google-maps/api": "^2.18.1",
     "axios": "^1.3.3",
